--- a/style.css
+++ b/style.css
@@ -7,24 +7,23 @@ ul{margin:0;}
   display: flex;
   justify-content: space-around;
   /*flex-flow: row wrap;*/
-  flex: 3;
+  flex-grow: 3;
   flex-wrap: wrap;
 }
 
 .posts article {
-  flex: 0 0 42%
+  flex: 0 0 42%;
 }
 
 .sidebar {
   display: flex;
-  flex: 1;
+  flex-grow: 1;
   flex-direction: column;
   align-items: center;
 }
 
 .container {
   display: flex;
-  justify-content: space-around;
   box-sizing: border-box;
   width: 65em;
   margin: 0 auto;
@@ -36,21 +35,33 @@ body {
 }
 
 .hero {
+  justify-content: space-between;
+}
+
+.hero {
     /* DO NOT CHANGE THESE */
     background-color: #444444;
     width: 100%;
     clear: both;
+    display: flex;
+    flex-flow: row wrap
 }
 
 .hero li {
   list-style: none;
   display: inline;
+  align-self: flex-end;
+  text-align: right;
 }
 
 .hero h1 {
-  margin-left: 6em;
+  margin-left: 4em;
     /* DO NOT CHANGE THESE */
     color: #ffffff;
+}
+
+.hero nav {
+  align-self: flex-end;
 }
 
 .posts {
@@ -87,6 +98,7 @@ footer p {
   color: #ffffff;
   background-color: #444444
   align-self: flex-end;
+  text-align:right;
 }
 
 footer {
@@ -94,4 +106,11 @@ footer {
     background-color: #444444;
     color: #eeeeee;
     display: flex;
+    flex-flow: column wrap;
+    justify-content: flex-start;
+}
+
+li a {
+  color: #ffffff;
+  text-decoration: none;
 }
