--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
 
 .hero {
   justify-content: space-between;
+  border-radius: 1em 1em 0em 0em;
 }
 
 .hero {
@@ -52,16 +53,19 @@ body {
   display: inline;
   align-self: flex-end;
   text-align: right;
+  padding: 1em;
 }
 
 .hero h1 {
-  margin-left: 4em;
+  margin-left: 1em;
     /* DO NOT CHANGE THESE */
     color: #ffffff;
+    padding: 3em;
 }
 
 .hero nav {
   align-self: flex-end;
+  padding: 2em;
 }
 
 .posts {
@@ -101,12 +105,16 @@ footer p {
   text-align:right;
 }
 
+footer nav {
+  width: 50%;
+}
+
 footer {
     /* DO NOT CHANGE THESE */
     background-color: #444444;
     color: #eeeeee;
     display: flex;
-    flex-flow: column wrap;
+    /*flex-flow: column wrap;*/
     justify-content: flex-start;
 }
 
