Changed spacing of navigation elements in the header. Simplified code to do this

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ ul{margin:0;}
 .posts {
   display: flex;
   justify-content: space-around;
-  /*flex-flow: row wrap;*/
   flex-grow: 3;
   flex-wrap: wrap;
 }
@@ -25,7 +24,7 @@ ul{margin:0;}
 .container {
   display: flex;
   box-sizing: border-box;
-  width: 65em;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -45,7 +44,7 @@ body {
     width: 100%;
     clear: both;
     display: flex;
-    flex-flow: row wrap
+    flex-flow: row wrap;
 }
 
 .hero li {
@@ -53,11 +52,11 @@ body {
   display: inline;
   align-self: flex-end;
   text-align: right;
-  padding: 1em;
+  margin-left: 1em;
 }
 
 .hero h1 {
-  margin-left: 1em;
+    margin-left: 1em;
     /* DO NOT CHANGE THESE */
     color: #ffffff;
     padding: 3em;
@@ -65,7 +64,8 @@ body {
 
 .hero nav {
   align-self: flex-end;
-  padding: 2em;
+  box-sizing: border-box;
+  margin-bottom: 1em;
 }
 
 .posts {
