--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ ul{margin:0;}
 }
 
 .container {
-  display: flex;
+  /*display: flex;*/
   box-sizing: border-box;
   width: 80%;
   margin: 0 auto;
@@ -121,4 +121,10 @@ footer {
 li a {
   color: #ffffff;
   text-decoration: none;
+}
+
+@media screen and (min-width: 35em) {
+  .container {
+    display: flex;
+  }
 }
