--- a/style.css
+++ b/style.css
@@ -3,12 +3,11 @@
 html,body,header,main,footer,section,aside,h1,h2,h3,h4,p{margin:0;padding:0;}
 ul{margin:0;}
 
-.posts {
-  display: flex;
+/*.posts {
   justify-content: space-around;
   flex-grow: 3;
   flex-wrap: wrap;
-}
+}*/
 
 .posts article {
   flex: 0 0 42%;
@@ -126,5 +125,11 @@ li a {
 @media screen and (min-width: 35em) {
   .container {
     display: flex;
+  }
+  .posts {
+    display: flex;
+    justify-content: space-around;
+    flex-grow: 3;
+    flex-wrap: wrap;
   }
 }
