--- a/style.css
+++ b/style.css
@@ -96,11 +96,14 @@ footer p {
   color: #ffffff;
   background-color: #444444
   align-self: flex-end;
-  /*text-align:right;*/
+  text-align:right;
+  padding: 1em;
 }
 
 footer nav {
   width: 50%;
+  padding: 1em;
+  /*font-size: 0.7em;*/
 }
 
 footer {
@@ -144,6 +147,10 @@ li a {
     display: flex;
   }
   .footer p {
+    padding: 0em;
     text-align: right;
+    align-self: flex-end;
+    display: flex;
   }
+
 }
