--- a/style.css
+++ b/style.css
@@ -95,7 +95,6 @@ footer p {
   color: #ffffff;
   background-color: #444444
   align-self: flex-end;
-  text-align:right;
   padding: 1em;
   font-size: 0.7em;
 }
@@ -124,17 +123,15 @@ li a {
 }
 
 @media screen and (min-width: 35em) {
-  .container {
-    display: flex;
-    width: 80%;
-  }
   .posts {
     display: flex;
     justify-content: space-around;
     flex-grow: 3;
     flex-wrap: wrap;
     margin: 0;
-    /*this margin may be wrong*/
+  }
+  .sidebar {
+    flex-direction: row;
   }
   .hero {
     display: flex;
@@ -142,26 +139,47 @@ li a {
   }
   .hero h1 {
     margin-left: 1em;
-    padding: 3em;
+    padding: 1em;
   }
   .hero nav {
     margin-bottom: 1em;
-  }
-  .sidebar section {
-    width: 85%;
   }
   footer {
     display: flex;
   }
   footer p {
-    padding: 0em;
-    text-align: right;
-    align-self: flex-end;
     display: flex;
     font-size: 1em;
+    margin: 0.5em;
   }
   footer li {
     font-size: 1em;
   }
+  footer nav {
+    width: 30%;
+  }
+}
 
+@media screen and (min-width: 70em) {
+  .container {
+    display: flex;
+    width: 80%;
+  }
+  .sidebar {
+    flex-direction: column;
+  }
+  .hero h1 {
+    padding: 3em;
+  }
+  .sidebar section {
+    width: 85%;
+  }
+  footer p {
+    padding: 0em;
+    text-align: right;
+    align-self: flex-end;
+    margin: 3em;
+  }
+  footer nav {
+    width: 50%;
 }
