--- a/newstyle.css
+++ b/newstyle.css
@@ -8,6 +8,8 @@ Error: File to import not found or unreadable: posts.
 4: @import 'variables';
 5: @import 'page.header';
 6: @import 'posts';
+7: @import 'sidebar';
+8: @import 'footer';
 
 Backtrace:
 sass/main.scss:6
@@ -51,4 +53,4 @@ sass/main.scss:6
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: File to import not found or unreadable: posts.\A         on line 6 of sass/main.scss\A \A 1: @import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i');\A 2: @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');\A 3: \A 4: @import 'variables';\A 5: @import 'page.header';\A 6: @import 'posts';"; }
+  content: "Error: File to import not found or unreadable: posts.\A         on line 6 of sass/main.scss\A \A 1: @import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i');\A 2: @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');\A 3: \A 4: @import 'variables';\A 5: @import 'page.header';\A 6: @import 'posts';\A 7: @import 'sidebar';\A 8: @import 'footer';"; }
