--- a/newstyle.css
+++ b/newstyle.css
@@ -1,55 +1,156 @@
-/*
-Error: File to import not found or unreadable: tablet.display.
-        on line 10 of sass/main.scss
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i");
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+/* posts */
+/* sidebar */
+html, body, header, main, footer, section, aside, h1, h2, h3, h4, p {
+  margin: 0;
+  padding: 0; }
 
-5: @import 'mainbody';
-6: @import 'page.header';
-7: @import 'posts';
-8: @import 'sidebar';
-9: @import 'footer';
-10: @import 'tablet.display';
-11: @import 'phone.landscape';
+ul {
+  margin: 0; }
 
-Backtrace:
-sass/main.scss:10
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/import_node.rb:67:in `rescue in import'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/import_node.rb:45:in `import'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/import_node.rb:28:in `imported_file'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/import_node.rb:37:in `css_import?'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:313:in `visit_import'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:36:in `visit'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/stack.rb:79:in `block in with_base'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/stack.rb:115:in `with_frame'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/stack.rb:79:in `with_base'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:160:in `visit'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:52:in `map'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:169:in `block in visit_children'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:168:in `visit_children'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:188:in `visit_root'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:36:in `visit'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:159:in `visit'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/root_node.rb:36:in `css_tree'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/engine.rb:381:in `_render_with_sourcemap'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/engine.rb:298:in `render_with_sourcemap'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/plugin/compiler.rb:209:in `each'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/plugin/compiler.rb:473:in `on_file_changed'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/lib/sass/plugin/compiler.rb:331:in `block in watch'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
-/usr/local/lib/ruby/gems/2.4.0/gems/sass-3.4.23/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: File to import not found or unreadable: tablet.display.\A         on line 10 of sass/main.scss\A \A 5: @import 'mainbody';\A 6: @import 'page.header';\A 7: @import 'posts';\A 8: @import 'sidebar';\A 9: @import 'footer';\A 10: @import 'tablet.display';\A 11: @import 'phone.landscape';"; }
+.container {
+  box-sizing: border-box;
+  width: 95%;
+  margin: 0 auto; }
+
+body {
+  font-family: Verdana, Arial, sans-serif; }
+
+.hero {
+  justify-content: space-between;
+  border-radius: 1em 1em 0em 0em;
+  background-color: #444444;
+  width: 100%;
+  clear: both; }
+  .hero li {
+    list-style: none;
+    display: inline;
+    align-self: flex-end;
+    text-align: right;
+    margin-left: 1em; }
+  .hero h1 {
+    color: #ffffff; }
+  .hero nav {
+    align-self: flex-end;
+    box-sizing: border-box;
+    margin-bottom: 0.5em; }
+  .hero ul {
+    padding: 0; }
+
+.posts {
+  color: #444444;
+  margin: 1em; }
+  .posts article {
+    background-color: #dddddd;
+    border: 1px solid #444444;
+    height: 20em;
+    box-sizing: border-box;
+    margin: 1em 0 1.5em 0;
+    flex: 0 0 42%; }
+
+.sidebar {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  align-items: center;
+  background-color: #aaaaaa;
+  color: #444444; }
+  .sidebar section {
+    background-color: #dddddd;
+    border: 1px solid #444444;
+    height: 10em;
+    box-sizing: border-box;
+    width: 90%;
+    margin: 1em; }
+
+footer {
+  background-color: #444444;
+  color: #eeeeee;
+  justify-content: flex-start; }
+  footer p {
+    color: #ffffff;
+    background-color: #444444;
+    align-self: flex-end;
+    padding: 1em;
+    font-size: 0.7em; }
+  footer nav {
+    width: 50%;
+    padding: 1em; }
+  footer li {
+    font-size: 0.7em; }
+  footer a {
+    color: #ffffff;
+    text-decoration: none; }
+
+@media screen and (min-width: 35em) {
+  .fa-bars {
+    display: none; }
+
+  .posts {
+    display: flex;
+    justify-content: space-around;
+    flex-grow: 3;
+    flex-wrap: wrap;
+    margin: 0; }
+
+  .sidebar {
+    flex-direction: row; }
+
+  .hero {
+    display: flex;
+    flex-flow: row wrap; }
+
+  .hero h1 {
+    margin-left: 1em;
+    padding: 1em; }
+
+  .hero nav {
+    margin-bottom: 1em; }
+
+  footer {
+    display: flex; }
+
+  footer p {
+    display: flex;
+    font-size: 1em;
+    margin: 0.5em; }
+
+  footer li {
+    font-size: 1em; }
+
+  footer nav {
+    width: 30%; } }
+@media screen and (min-width: 40em) and (max-width: 42em) {
+  .posts article {
+    flex: 0 0 30%; } }
+@media screen and (min-width: 60em) and (max-width: 62em) {
+  .posts article {
+    flex: 0 0 30%; }
+
+  footer nav {
+    width: 50%; } }
+@media screen and (min-width: 70em) {
+  .posts article {
+    flex: 0 0 42%; }
+
+  .container {
+    display: flex;
+    width: 80%; }
+
+  .sidebar {
+    flex-direction: column; }
+
+  .hero h1 {
+    padding: 3em; }
+
+  .sidebar section {
+    width: 85%; }
+
+  footer p {
+    padding: 0em;
+    text-align: right;
+    align-self: flex-end;
+    margin: 3em; } }
+
+/*# sourceMappingURL=newstyle.css.map */
