Added comment for change that needs to be made

--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -3,6 +3,7 @@ $themeColorMain: #444444;
 $themeColorFont: #ffffff;
 $themeFooterColor: #eeeeee;
 $themeSize: 1em;
+/* change themeSize because this is not semantic */
 $themeSmallSize: 0.7em;
 $borderThemeSize: 1px solid $themeColorMain;
 
